<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="noScroll">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:layout_constraintDimensionRatio="16:9"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <ImageView
                            android:id="@+id/eventImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/eventImageDescription"
                            android:scaleType="centerCrop"
                            tools:ignore="ImageContrastCheck" />

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_favorite_border"
                        android:contentDescription="@string/favoriteEvent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- Event Name -->
                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Informasi Event -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/eventInfoCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toBottomOf="@id/eventName">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="8dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_person_presenter"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/eventOwner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="8dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_time"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/eventTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_people"
                                tools:ignore="ContentDescription" />

                            <TextView
                                android:id="@+id/eventQuota"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:textSize="16sp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- Deskripsi Event -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/descriptionCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintTop_toBottomOf="@id/eventInfoCard">

                    <TextView
                        android:id="@+id/eventDescription"
                        style="@style/EventDescriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:autoLink="web"
                        android:contentDescription="@string/event_description_content_desc" />
                </com.google.android.material.card.MaterialCardView>

                <!-- Button untuk membuka tautan event -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/openEventLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/eventLink"
                    android:padding="12dp"
                    app:cornerRadius="8dp"
                    app:layout_constraintTop_toBottomOf="@id/descriptionCard"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="VisualLintButtonSize" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBarDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- Tombol Reload -->
        <Button
            android:id="@+id/btnReloadDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reloadEvent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/progressBarDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>